# candinista

./: .cproject  .project  CMakeLists.txt  LICENSE  Makefile  README.md  cairo-misc.c  cairo-misc.h  cairo_bargraph.c  cairo_gauge.c  cairo_gauge.h  cairo_info_panel.c  cairo_panel.h  candinista  candinista.blp.m4  candinista.c  candinista.h  candinista.ui  config.json  config.yaml  d3-array.c  d3-array.h  datalogging.c  datalogging.h  environ.c  gps-panel.c  gtk-glue.c  gtk-glue.h  info-panel.c  interpolate.c  linear-panel.c  makefile.config  panel.c  panel.h  printjson.c  radial-panel.c  readjson.c  sensor.c  sensor.h  styles.css  (+7 more)
.github/workflows/: cmake-single-platform.yml
GUI/: builder.ui  candinista.blp  candinista.ui.cmb  gui.glade
cairo/: cairo-misc.h  info-panel.c  linear-panel.c  radial-panel.c  tpms-panel.c
config/: yaml-loader.c  yaml-loader.h  yaml-printer.c  yaml-printer.h
core/: datalogging.c  interpolate.c  panel.c  panel.h  sensor.c  sensor.h  units.c  units.h
data-tools/: decode.c  gensensordata.c  microsleep.c
datalogs/: Candata1710733669.csv  Candata1710733937.csv  Candata1710733961.csv  Candata1710733989.csv  Candata1710734932.csv  Candata1710735016.csv  Candata1710735617.csv  Candata1710736218.csv  Candata1710736819.csv  Candata1710737420.csv  Candata1710738021.csv  Candata1710738622.csv  Candata1710739223.csv  Candata1710739824.csv  Candata1710740425.csv  Candata1710798820.csv  Candata1710799422.csv  Candata1710800023.csv  Candata1710800624.csv  Candata1710801225.csv  Candata1710801826.csv  Candata1710819509.csv  Candata1710819757.csv  Candata1710820358.csv  Candata1710821342.csv  Candata1710822455.csv  Candata1710822582.csv  Candata1710824143.csv  Candata1710824850.csv  Candata1710824913.csv  Candata1710824931.csv  Candata1710825016.csv  Candata1710869688.csv  Candata1710869948.csv  Candata1710870024.csv  Candata1710870302.csv  Candata1710871282.csv  Candata1710871391.csv  Candata1710871997.csv  Candata1710872906.csv  (+95 more)
eyecandy/: dropdowns.c  dropdowns.h  editor-window.c  editor-window.h  eyecandy.c  main.c  panel-editor.c  panel-editor.h  panel-routines.c  sensor-editor.c  sensor-editor.h  tree-picker.c  tree-picker.h
loader/: d3-array.c  d3-array.h  yaml-loader.c  yaml-loader.h  yaml-printer.c
misc/: gtk-glue.c  gtk-glue.h  panel.c  panel.h  sensor.c  sensor.h
old/: descriptors.c
ui/: cairo-misc.c  cairo-misc.h  gps-panel.c  gtk-glue.c  gtk-glue.h  info-panel.c  linear-panel.c  panel_specs.h  radial-panel.c  tpms-panel.c
yaml/: d3-array.c  yaml-printer.h
